@@ -104,8 +104,13 @@ namespace __cxxabiv1
 		    size_t __padding_size, void (*__destructor) (void*),
 		    void (*__dealloc) (void*, size_t));
 
+#ifdef __ARM_EABI__
+  // The ARM EABI says this is a 32-bit type.
+  typedef int __guard;
+#else
   // The ABI requires a 64-bit type.
   __extension__ typedef int __guard __attribute__((mode (__DI__)));
+#endif
 
   int 
   __cxa_guard_acquire(__guard*);
